# numerical_methods

./: .gitignore  README.md
common/: CMakeLists.txt  main.s  notes.md  squareroot_newton.hh  symbols  symbols_decoded
common/example/: CMakeLists.txt  main.cc
common/lib/: CMakeLists.txt  squareroot_newton.cc
common/test/: CMakeLists.txt  test_squareroot_newton.cc
